# academic-research-skills

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/: release.yml
.github/workflows/: release.yml  validate.yml
evals/: trigger-boundaries.json
examples/: skill-use-cases.md
references/: artifact-open-science-policy.md  cs-methodology-evaluation-policy.md  ethics-data-governance.md  experiment-policy.md  external-skill-recommendations.md  mcp-catalog.md  peer-review-policy.md
scripts/: check_release.py  smoke_install_skills.sh  spec_validate_skills.sh  sync_skill_references.py  validate_skills.py
skills/academic-mcp-tooling/: SKILL.md
skills/adversarial-peer-review/: SKILL.md
skills/adversarial-review/: SKILL.md
skills/artifact-open-science/: SKILL.md
skills/badge-compliance-profiles/: SKILL.md
skills/citation-bibliography-tooling/: SKILL.md
skills/citation-claim-audit/: SKILL.md
skills/contribution-package/: SKILL.md
skills/cs-methodology-evaluation/: SKILL.md
skills/cs-venue-strategy/: SKILL.md
skills/develop-contribution/: SKILL.md
skills/digest-paper/: SKILL.md
skills/document-conversion/: SKILL.md
skills/ethics-data-governance/: SKILL.md
skills/experiment-logbook/: SKILL.md
skills/explore-sota/: SKILL.md
skills/manage-submission/: SKILL.md
skills/package-artifacts/: SKILL.md
skills/paper-framing/: SKILL.md
skills/paper-release/: SKILL.md
skills/paper-submission-lifecycle/: SKILL.md
skills/paper-writing-review/: SKILL.md
skills/publication-figures-tables/: SKILL.md
skills/rebuttal-revision-strategy/: SKILL.md
skills/repo-migration/: SKILL.md
skills/research-agenda/: SKILL.md
skills/research-data-analysis/: SKILL.md
skills/research-design-positioning/: SKILL.md
skills/research-project-maintenance/: SKILL.md
skills/research-project-router/: SKILL.md
tests/: test_skill_structure.py
(+86 files in other folders)
